...
    var strPrice = "Product Cost".localized()
    var strOptionsTotal = "Options:".localized()
    var strDistance = "Distance Range:".localized()

    var strRemove = "Remove".localized()
    var strUpdate = "Update".localized()
    var strNext = "Preview".localized()

    var strSubtotal = "Subtotal".localized()
    var strTax = "Tax".localized()
    var strTotalAmount = "Total".localized()

    var strCustomValue = "Add Custom Value".localized()
...
    var strAddNote = "Add Note".localized()
    var strAddNoteBtn = "Add Note".localized()
    var strUser = "User".localized()

    
    
    var strSubmit = "Submit".localized()
    var strSubmitOnly = "Submit Only".localized()
    var strSubmitAutoInjection = "Submit + Enable Auto Injection".localized()
    var strRemoveChecklist = "Remove Checklist".localized()
    var strFrontImage = "Front Side of License".localized()
    var strBackImage = "Back Side of License".localized()
    var strUploadFrontImage = "Upload Front of License".localized()
    var strUploadBackImage = "Upload Back of License".localized()
    var strLicenseBottomText = "How should this license be saved?".localized()
    var strLicenseTypeTopText = "Enter the license expiration date to enable License Auto Injection for future orders.".localized()
...
